[project]
name = "open-data-health-map"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.4.3",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "litellm>=1.80.10",
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pyarrow>=22.0.0",
    "pydeck>=0.9.1",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.2",
]
